changes to layout to fix white bar on ios15

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@ body {
     margin: 0;    
     overflow-y: hidden;
     overflow-x: hidden;
-    height: 100vh;
+    min-height: 100%;
     height: 100%;
+    background-color: "#F00";
 }
 
 html {
@@ -16,6 +17,7 @@ html {
     -moz-osx-font-smoothing: grayscale;
     background-color: "#FF0";
     height: 100vh;
+    min-height: 100vh;
 }
 
 code {
